# pluginrust

./: .gitignore  Cargo.toml
.metadata/: build.proj  readme.txt  webauthnpriv.cpp
.windows/: out.winmd  pluginauthenticator.winmd
app/: README.md
app/src-tauri/: Cargo.toml
app/src-tauri/src/: lib.rs  main.rs
bindings/: Cargo.toml  build.rs
bindings/.metadata/: pluginauthenticator.cpp  scraper.settings.rsp
bindings/.metadata/webauthn/experimental/: README.md
bindings/.windows/: pluginauthenticator.winmd
bindings/src/: bindings.rs  lib.rs
gen-bindings/: Cargo.toml
gen-bindings/.metadata/: build.proj  libMappings.rsp
gen-bindings/.metadata/webauthn/experimental/: webauthnpriv.h
gen-bindings/src/: main.rs
src/: bindings.rs  main.rs
webauthn/: webauthn.h
webauthn/experimental/: pluginauthenticator.idl
