[package]
name = "rusty-contoso-passkeys"
version = "0.1.0"
edition = "2021"

[dependencies.windows-core]
version = "0.61.2"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_System_Com"
]

[dev-dependencies.windows-bindgen]
version = "0.62.1"

[dependencies.windows-link]
version = "0.1"