[package]
name = "rusty-contoso-passkeys-bindings"
version = "0.1.0"
edition = "2021"

[dependencies.windows-core]
version = "0.61.2"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
]

[dependencies.windows-sys]
version = "0.60.2"

[dependencies.windows-link]
version = "0.1"

[dependencies.windows-strings]
version = "0.4.2"